--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+
+
+
 .App {
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
