--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+
+@import url('https://rsms.me/inter/inter.css');
+
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
+#root {
+  font-family: inter;
+  background: #f0f0f0;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
